@@ -902,6 +902,12 @@ file).
 Please note that this adds all content of backup file to phone and
 does not care about current data in the phone (no duplicates are 
 detected).
+
+Use -yes parameter to answer yes to all questions (you want to automatically 
+restore all data).
+
+Use -memory parameter to force usage of defined memory type for storing entries 
+regardless what backu format says.
 '''
 HELP['clearall'] = '''Deletes all private data from the phone.
 ''' 
